--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@omnedia/ngx-timeline": "^4.0.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -52,7 +53,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.548.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.23.24",
+    "motion": "^12.33.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
